# vl-model

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: tech-stack.mdc
src/mr/: __init__.py  batch_clip.py  clipper.py  conf.py  cyclefind.py  drawer.py  group.py  prompt.py  text_location.py  tools.py  utils.py  vlask.py
src/mr/tests/: test_agent.py  test_reader.py  test_text_location.py  test_tools.py  test_vlask.py
src/vl_model/: client.py  openvl.py  sam.py
tests/: test_prompt.py
