[project]
name = "vl-model"
version = "0.1.0"
description = "Using openai vision model to read meter value from image."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.3",
    "openai>=1.83.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pydantic-ai[logfire]>=0.3.1",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["setuptools>=42", "wheel", "uv>=0.1.0"]
build-backend = "setuptools.build_meta"


[tool.ruff]
indent-width = 2
line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-dotenv>=0.5.2",
]
